# frontmatter-analysis

./: README.md  beta_gouv_fr.ipynb  pyproject.toml
fma/: analyze.py
